--- a/index.html
+++ b/index.html
@@ -7,16 +7,21 @@
 
 </head>
 <body>
-<canvas id="myCanvas" class="myCanvas" width="288" height="512"></canvas>
+<div class="body">
+    <h1 class="body__title">Bạn tôi bay bay</h1>
+    <canvas id="myCanvas" class="myCanvas" width="300" height="520"></canvas>
+</div>
 <img id="bird" style="display: none" src="./images/bird.png" alt="">
+<img id="fg" style="display: none" src="./images/fg.png" alt="">
 <img id="pipeNorth" style="display: none" src="./images/pipeNorth.png" alt="">
 <img id="pipeSouth" style="display: none" src="./images/pipeSouth.png" alt="">
-<img id="fg" style="display: none" src="./images/fg.png" alt="">
-</body>
 
+<!--<button type="button" onclick="startGame()">Start</button>-->
 <script src="pipeNorth.js"></script>
+
+
 <script src="pipeSouth.js"></script>
 <script src="classBird.js"></script>
 <script src="main.js"></script>
-
+</body>
 </html>
