--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p class="score__heading">Score: <span id="score__title" class="score__title"></span></p>
         <button id="restart" class="btn" type="reset" onclick="restart()">Restart</button>
     </div>
-    <button id="startGame" class="btn" onclick="startGame()">Start</button>
+<!--    <button id="startGame" class="btn" onclick="startGame()">Start</button>-->
 </div>
 <img id="bird" style="display: none" src="./images/bird.png" alt="">
 <img id="fg" style="display: none" src="images/ground.png" alt="">
