--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comforter+Brush&family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
 
-
 </head>
 <body>
 <div class="body">
@@ -22,10 +21,10 @@
         <p class="score__heading">Score: <span id="score__title" class="score__title"></span></p>
         <button id="restart" class="btn" type="reset" onclick="restart()">Restart</button>
     </div>
-<!--    <button id="startGame" class="btn" onclick="startGame()">Start</button>-->
+    <button id="startGame" class="btn" onclick="startGame()">Start</button>
 </div>
 <img id="bird" style="display: none" src="./images/bird.png" alt="">
-<img id="fg" style="display: none" src="images/ground.png" alt="">
+<img id="ground" style="display: none" src="images/ground.png" alt="">
 <img id="pipeNorth" style="display: none" src="./images/pipeNorth.png" alt="">
 <img id="pipeSouth" style="display: none" src="./images/pipeSouth.png" alt="">
 
@@ -36,6 +35,7 @@
 <script src="pipeNorth.js"></script>
 <script src="pipeSouth.js"></script>
 <script src="classBird.js"></script>
+<script src="classGround.js"></script>
 <script src="main.js"></script>
 </body>
 </html>
