--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Comforter+Brush&family=Dancing+Script:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Comforter+Brush&family=Dancing+Script:wght@600&display=swap"
+          rel="stylesheet">
 
 </head>
 <body>
@@ -29,7 +30,7 @@
 <img id="pipeSouth" style="display: none" src="./images/pipeSouth.png" alt="">
 
 <audio id="music">
-    <source src="sounds/CallOfDuty-BrianTyler_3v8ft (mp3cut.net).mp3" type="audio/mpeg">
+    <source src="sounds/bg-music.mp3" type="audio/mpeg">
 </audio>
 
 <script src="pipeNorth.js"></script>
